# word-2-vect-skipgram

./: Dockerfile  Makefile  README.md  pyproject.toml  train.py  train_word2vect.py  word2vec_main.py
.github/workflows/: liting-test.yml
corelib/ml/factory/: __init__.py
corelib/ml/model/: architecture.py  factory.py
corelib/ml/train/: train.py
net/: train.py  validation.py
tests/: conftest.py
tests/algorithms/: __init__.py  test_network_algorithm.py
tests/data_loaders/: __init__.py  test_w2vdataset.py
tests/fixtures/: __init__.py  data_loaders.py  loss_functions.py  metrics.py  models.py  network.py  optimizers.py  trackers.py
tests/loss_functions/: __init__.py  test_interface.py  test_negative_log_likelihood.py
tests/metrics/: __init__.py  test_f1_score.py  test_interface.py  test_scores.py
tests/models/: __init__.py  test_word2vect_model.py
tests/network/: __init__.py  test_fully_connected.py  test_skipgram.py
utilities/: __init__.py  data_prep.py
visualization/: tsne_vis.py
word2vect/data/: data_prep.py
word2vect/data/loaders/: __init__.py  collate_functions.py  dataset.py
word2vect/ml/: factory.py  metrics.py  neuralnet.py
word2vect/ml/algorithms/: __init__.py  algorithm.py  algorithm_factory.py  network_algorithm.py
word2vect/ml/loss_functions/: __init__.py  interface.py  loss_function_factory.py  negative_log_likelihood.py
word2vect/ml/metrics/: __init__.py  f1_score.py  interface.py  metrics_factory.py  precision_score.py  recall_score.py
word2vect/ml/model/: __init__.py  model_factory.py  model_interface.py  word2vect_model.py
word2vect/ml/model_selection/: tsne_vis.py  validation.py
word2vect/ml/models/: __init__.py  architecture.py  model_factory.py  model_interface.py  (+1 more)
word2vect/utils/: __init__.py  hashing.py
(+11 files in other folders)
